contact from in progress fix overflow4

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -10,7 +10,7 @@
   height: 100%;
 
   h1 {
-    font-size: 50px;
+    font-size: 30px;
     color: $darkColor;
     overflow: hidden;
     text-align: center;
@@ -33,21 +33,21 @@
     justify-content: flex-start;
     overflow: hidden;
     .left {
-      flex: 5;
+      flex: 1;
       img {
         height: 350px;
         overflow: hidden;
       }
     }
     .right {
-      flex: 7;
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       form {
         height: 320px;
-        margin-top: 40px;
+        margin-top: 35px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -84,7 +84,7 @@
     }
   }
   .footer {
-    margin-top: 70px;
+    margin-top: 80px;
     width: 100vw;
     height: 12%;
     background-color: $darkColor;
